<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="2dp">

    <ImageView
        android:id="@+id/imgVwRes2"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:contentDescription="@string/img2"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/wafflewolf" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_weight="3"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtVwNom2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edt_nom"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/txtVwDesc2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edt_desc"
            android:textColor="@android:color/black"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/txtVwDirTel2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edt_dir_tel"
            android:textColor="@android:color/black"
            android:textSize="12sp" />

    </LinearLayout>

    <RatingBar
        android:id="@+id/rbEval2"
        style="?android:attr/ratingBarStyleIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:isIndicator="true"
        android:max="3"
        android:numStars="3"
        android:rating="1"
        android:stepSize="1" />

</LinearLayout>